templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: garden-service-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: garden-service
  template:
    metadata:
      labels:
        app: garden-service
      name: garden-service
    spec:
      containers:
        - name: garden-service
          image: johnwalker333/garden-service
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
