templates/garden-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: garden-service
spec:
  type: ClusterIP
  selector:
    app: garden-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
