templates/petunia-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petunia-service
spec:
  type: LoadBalancer
  selector:
    app: petunia-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
