templates/petunia-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petunia
spec:
  ingressClassName: nginx
  rules:
    - host: johnwalkers.com
      http:
        paths:
          - path: /petunia
            pathType: Prefix
            backend:
              service:
                name: petunia-service
                port:
                  number: 80
